# keystone

./: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  docker_build.yaml  integration_test_cosmos_store.yaml  integration_test_memory_store.yaml  integration_tests.yaml  publish.yaml  security_tests.yaml  tests.yaml  unit_tests.yaml
azure_ad_scim_2_api/: __init__.py  cmd.py
azure_ad_scim_2_api/models/: __init__.py  group.py  user.py
azure_ad_scim_2_api/rest/: __init__.py  group.py  user.py
azure_ad_scim_2_api/security/: az_keyvault_client.py
azure_ad_scim_2_api/store/: __init__.py  azure_ad_store.py  cosmos_db_store.py  memory_store.py
azure_ad_scim_2_api/util/: __init__.py  config.py  exc.py  logger.py  store_util.py
config/: README.md  dev-cosmos.yaml  dev.yaml  integration-tests-cosmos-store.yaml  integration-tests-memory-store.yaml  integration-tests-mongo-store.yaml  integration-tests-pg-store.yaml  tests.yaml
deploy/kubernetes/: deployment.yaml  ingress.yaml  service.yaml
keystone/: __init__.py  cmd.py
keystone/models/: group.py  user.py
keystone/rest/: __init__.py  group.py  user.py
keystone/security/: authn.py
keystone/store/: __init__.py  cosmos_db_store.py  memory_store.py  mongodb_store.py  pg_models.py  pg_sql_queries.py  postgresql_store.py
keystone/util/: config.py  store_util.py
keystone_scim/: __init__.py  cmd.py
keystone_scim/models/: __init__.py  group.py  user.py
keystone_scim/rest/: __init__.py  group.py  user.py
keystone_scim/security/: authn.py
keystone_scim/store/: cosmos_db_store.py  memory_store.py  mongodb_store.py  mysql_models.py  mysql_queries.py  mysql_store.py  pg_models.py  pg_sql_queries.py  postgresql_store.py
keystone_scim/util/: config.py  (+1 more)
logo/: logo.ascii
scim_2_api/: cmd.py
tests/: conftest.py
(+40 files in other folders)
