[tool.poetry]
name = "azure_ad_scim_2_api"
version = "0.1.0-rc.0"
description = "A SCIM 2.0 Provisioning API for Azure AD Tenants"
authors = ["Yuval Herziger <yherziger@microsoft.com>"]
license = "MIT"

[tool.poetry.scripts]
aad-scim2-api = 'azure_ad_scim_2_api.cmd:run'

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aiohttp-apispec = "^2.2.3"
aiohttp-catcher = "^0.3.1"
asyncio = "^3.4.3"
azure-identity = "^1.10.0"
azure-keyvault-secrets = "^4.4.0"
pyyaml = "^6.0"
python-json-logger = "^2.0.2"
schema = "^0.7.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
black = "^22.3.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
