[tool.poetry]
name = "keystone-scim"
version = "0.1.0"
description = "A SCIM 2.0 Provisioning API"
authors = ["Yuval Herziger <yherziger@microsoft.com>"]
license = "MIT"

[tool.poetry.scripts]
keystone-scim = "keystone_scim.cmd:run"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aiohttp-apispec = "^2.2.3"
aiohttp-catcher = "^0.3.2"
aiopg  = "^1.3.4"
asyncio = "^3.4.3"
azure-cosmos = "^4.3.0"
azure-identity = "^1.10.0"
azure-keyvault-secrets = "^4.4.0"
loguru = "^0.6.0"
motor = "^3.0.0"
psycopg2 = "^2.9.3"
pyyaml = "^6.0"
python-json-logger = "^2.0.2"
scim2-filter-parser = "^0.3.9"
schema = "^0.7.5"
SQLAlchemy = "^1.4.39"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
bandit = "^1.7.4"
jsonpath-ng = "^1.5.3"
names = "^0.3.0"
pytest = "^7.1.2"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest_check = "^1.0.5"
pytest-ordering = "^0.6"
safety = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
